# tap-linear

./: .gitignore  FIXES_APPLIED.md  README.md  meltano.yml  pyproject.toml  test_config.json  tox.ini
.github/workflows/: publish.yml  test.yml
tap_linear/: client.py  streams.py  tap.py
tap_linear/queries/: issues.py
tap_linear/schemas/: issues.py
tap_linear/tests/: test_core.py
