[tool.poetry]
name = "tap-linear"
version = "0.1.1"
description = "`tap-linear` is a Singer tap for Linear, built with the Meltano SDK for Singer Taps."
authors = ["Harisaran G"]
keywords = ["ELT", "Linear"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.6.2"
requests = "^2.25.1"
singer-sdk = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "tap_linear"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-linear = 'tap_linear.tap:TapLinear.cli'
